# vae-vs-dncnn

./: README.md  pyproject.toml
report/: paper.tex  references.bib
results/metrics/: results.csv
src/: config.py  dataset.py  evaluator.py  metrics.py  noise.py  trainer.py  visualizer.py
src/models/: dncnn.py  vae.py
visualizations/: fig1_dataset.py  fig2_noise_types.py  fig3_preprocessing.py  fig4_results.py  fig5_visual.py  fig6_efficiency.py  generate_all.py
