[project]
name = "vae-vs-dcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "scikit-image>=0.21",
    "lpips>=0.1.4",
    "tqdm>=4.65",
    "pandas>=2.0",
    "seaborn>=0.12",
    "PyYAML>=6.0",
    "scipy>=1.11",
]
